fix https://github.com/umjammer/vavi-apps-treeview/security/code-scanning/1